--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "flask>=3.1.1",
     "flask-jwt-extended>=4.7.1",
     "flask-marshmallow>=1.3.0",
+    "flask-migrate>=4.1.0",
     "flask-sqlalchemy>=3.1.1",
     "marshmallow>=4.0.0",
     "marshmallow-sqlalchemy>=1.4.2",
